--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "moment": "^2.22.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuewordcloud": "^17.12.23"
